Fix the alignment looking stupid in everything except IE.

--- a/ZithiaCharsheet/war/ZithiaCharsheet.css
+++ b/ZithiaCharsheet/war/ZithiaCharsheet.css
@@ -95,3 +95,8 @@ input.settableInt {
 .namesSection input {
   width: 130px;
 }
+
+table.characterList {
+  height: 35px;
+}
+
